html/css works in progress

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,8 @@
-@import 'modules/milestone_1_hero';
-@import 'modules/milestone_2_about';
-@import 'modules/milestone_3_stat';
-@import 'modules/milestone_4_slider';
+@import 'modules/hero';
+@import 'modules/about';
+@import 'modules/stat';
+@import 'modules/slider';
+@import 'modules/socials';
+@import 'modules/help';
+@import 'modules/footer';
 @import 'modules/reset';
