--- a/src/styles/modules/help.scss
+++ b/src/styles/modules/help.scss
@@ -26,14 +26,14 @@
     padding: 40px 20px;
 }
 
-.help-block:nth-child(odd){
-    //background-color: rgb(223, 221, 221);
-}
-
 .help__small-title{
     font-size: 24px;
     max-width: max-content;
     margin: auto;
     margin-bottom: 20px;
     //border-bottom: 2px solid grey;
+}
+
+.help__subtitle-info{
+    color: #646464;
 }
