--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -3,7 +3,7 @@
     margin-top: 80px;
 
 	width: 100%;
-	padding: 60px 150px;
+	padding: 60px 0; //150px;
 	background-color: cadetblue;
 }
 
@@ -12,4 +12,19 @@
 	font-size: 24px;
 	color: #fff;
 	text-align: center;
+}
+
+.footer__greetings-title{
+	margin-top: 30px;
+	color: #fff;
+}
+
+.footer__greetings-list{
+	text-decoration: none;
+	list-style-type: none;
+	color: #fff;
+}
+
+.footer__greetings-list{
+	padding: 0 auto;
 }
