--- a/src/styles/modules/hero.scss
+++ b/src/styles/modules/hero.scss
@@ -1,13 +1,16 @@
 .g-content{
 	max-width: 1440px;
 	width: 100%;
-	padding: 0 150px;
+	padding: 0 200px;
 
-	@media(max-width:1439px){
-		max-width: 1440px;
-		min-width: 300px;
-		width: 100%;
+	@media(max-width:1360px){
+		padding: 0 150px;
 	}
+
+	@media(max-width:998px){
+		padding: 0 100px;
+	}
+
 }
 
 .g-content-hero{
@@ -16,23 +19,84 @@
 
 .hero-wrapper{
 	display: flex;
+
 	justify-content: space-between;
 	padding-top: 100px;
+
+	@media(max-width:1360px){
+		justify-content: center;
+	}
+
 }
+
 .hero-picture{
 	float: right;
+
+	@media(max-width:1360px){
+		margin-left: 20px;
+	}
+
+	@media(max-width:998px){
+		margin-left: 0px;
+		float: left;
+		//float: left;
+	}
+
 }
 
 .hero-picture__img{
 	max-width: 483px;
 	max-height: 483px;
+
+	@media(max-width:1360px){
+		max-width: 383px;
+		max-height: 383px;
+		margin: auto 0;
+	}
+
+	@media(max-width:998px){
+		max-width: 300px;
+		max-height: 300px;
+		margin: auto 0;
+	}
 }
 
 .hero__main-title{
 	font-size: 100px;
+
+	@media(max-width:1360px){
+		font-size: 80px;
+	}
+
+	@media(max-width:998px){
+		font-size: 60px;
+	}
 }
 
 .hero__second-title{
 	margin-top: 11px;
 	color: rgb(100, 100, 100);
+	font-size: 21px;
+
+	@media(max-width:1360px){
+		margin-top: 0px;
+		font-size: 18px;
+		min-width: 376px;
+	}
+
+	@media(max-width:998px){
+		min-width: unset;
+		max-width: 302px;
+		font-size: 16px;
+	}
+
+}
+
+
+.hero__second-title > br {
+	
+	@media(max-width:998px){
+		display: none;
+
+	}
 }
