--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -4,7 +4,7 @@
 
 	width: 100%;
 	padding: 60px 0; //150px;
-	background-color: cadetblue;
+	background-color: #5f6e34;
 }
 
 .footer__main-title{
@@ -17,6 +17,7 @@
 .footer__greetings-title{
 	margin-top: 30px;
 	color: #fff;
+	font-weight: 300;
 }
 
 .footer__greetings-list{
