--- a/src/styles/modules/stat.scss
+++ b/src/styles/modules/stat.scss
@@ -1,6 +1,6 @@
 .g-content-smallStat{
 	margin-top: 100px;
-	background-color:rgb(109, 109, 109);
+	background-color:#778a41;
 	padding: 30px 0;
 }
 
