slider removed, animated hero picture added

--- a/src/styles/modules/hero.scss
+++ b/src/styles/modules/hero.scss
@@ -33,10 +33,10 @@
 
 }
 
-.hero-titles{
-	// flex-grow: 0;
-	// flex-shrink: 5;
-}
+// .hero-titles{
+// 	// flex-grow: 0;
+// 	// flex-shrink: 5;
+// }
 
 .hero-picture{
 	float: right;
