--- a/src/styles/modules/slider.scss
+++ b/src/styles/modules/slider.scss
@@ -1,37 +1,41 @@
-.g-content-slider {
-	margin: 130px auto 40px;
-}
+// .g-content-slider {
+// 	margin: 130px auto 40px;
+// }
 
-.slider-wrapper{
-	height: 100%;
-    position: relative;
-	z-index: -1;
-}
+// .slider-wrapper{
+// 	height: 100%;
+//     position: relative;
+// 	z-index: -1;
+// }
 
-.slider-img{
-	width:300px;
-	height: 370px;
-	object-fit: cover;
-}
+// .slider-img{
+// 	width:300px;
+// 	height: 370px;
+// 	object-fit: cover;
+// }
 
-.owl-dot span{
-	display: inline-block;
-	min-width: 10px;
-	min-height: 10px;
-	background-color: rgb(145, 145, 145);
-	border-radius: 10px;
-}
+// .owl-dot span{
+// 	display: inline-block;
+// 	min-width: 10px;
+// 	min-height: 10px;
+// 	background-color: rgb(145, 145, 145);
+// 	border-radius: 10px;
+// }
 
-.owl-dots{
-	display: flex;
-	justify-content: center;
-	margin-top: 30px;
-}
+// .owl-dots{
+// 	display: flex;
+// 	justify-content: center;
+// 	margin-top: 30px;
+// }
 
-.owl-dot:not(:last-child){
-	margin-right: 20px;
-}
+// .owl-dot:not(:last-child){
+// 	margin-right: 20px;
+// }
 
-.active span{
-	background-color: black;
+// .active span{
+// 	background-color: black;
+// }
+
+.phero-picture{
+	max-width: 500px;
 }
