modal added, refactoring required

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 @import 'modules/about';
 @import 'modules/stat';
 @import 'modules/slider';
-@import 'modules/socials';
+@import 'modules/modal_contacts';
 @import 'modules/help';
 @import 'modules/footer';
 @import 'modules/reset';
