--- a/src/styles/modules/menu.scss
+++ b/src/styles/modules/menu.scss
@@ -26,13 +26,21 @@
 	}
 
     @media(max-width:998px){
-        padding: 0 100px;
-        padding-top: 14px;
+        padding: 14px 100px;
+        //padding-top: 14px;
+	}
+
+    @media(max-width:576px){
+		padding: 14px 20px;
 	}
 }
 
 .menu-social-links:not(:last-child){
     margin-right: 30px;
+
+    @media(max-width:576px){
+		margin-right: 15px;
+	}
 
 }
 
@@ -41,5 +49,9 @@
 
     @media(max-width:998px){
 		font-size: 14px;
+	}
+
+    @media(max-width:576px){
+		font-size: 12px;
 	}
 }
