--- a/src/styles/modules/hero.scss
+++ b/src/styles/modules/hero.scss
@@ -30,6 +30,15 @@
 
 	@media(max-width:1360px){
 		justify-content: center;
+
+		//0000
+		//height: auto;
+		//width: 100%;
+		//max-width: fit-content;
+		//max-height: fit-content;
+
+		//0001
+		align-items: center;
 	}
 
 	@media(max-width:998px){
@@ -67,20 +76,48 @@
 	max-height: 483px;
 
 	@media(max-width:1360px){
-		max-width: 383px;
-		max-height: 383px;
-		margin: auto 0;
+		// max-width: 383px;
+		// max-height: 383px;
+		// margin: auto 0;
+
+		//0000
+		height: auto;
+		width: 100%;
+		max-width: 483px;
+		max-height: fit-content;
+	}
+
+
+	//0001
+	// @media(max-width:998px){
+	// 	max-width: 300px;
+	// 	max-height: 300px;
+	// 	margin: auto 0;
+	// }
+
+	@media(max-width:1360px){
+		//max-width: 250px;
+		//max-height: 250px;
+
+		min-width: 350px;
+		min-height: 350px;
 	}
 
 	@media(max-width:998px){
-		max-width: 300px;
-		max-height: 300px;
-		margin: auto 0;
+		max-width: 350px;
+		max-height: 350px;
 	}
 
+
+
 	@media(max-width:768px){
-		max-width: 250px;
-		max-height: 250px;
+		//max-width: 250px;
+		//max-height: 250px;
+
+
+
+		min-width: 290px;
+		min-height: 290px;
 	}
 
 	@media(max-width:576px){
@@ -96,6 +133,7 @@
 
 	@media(max-width:1360px){
 		font-size: 80px;
+		//font-size: 8vw; ///000
 	}
 
 	@media(max-width:998px){
