adaptive done, needless stuff deleted

--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -3,8 +3,8 @@
     margin-top: 80px;
 
 	width: 100%;
-	padding: 60px 0; //150px;
-	background-color: #537438;
+	padding: 60px 0; 
+	background-color: rgb(83, 116, 57);
 }
 
 .footer__greetings{
