--- a/src/styles/modules/modal_contacts.scss
+++ b/src/styles/modules/modal_contacts.scss
@@ -24,35 +24,23 @@
     box-shadow: 0px 0px 50px 20px rgba(0,0,0,0.37);
     -webkit-box-shadow: 0px 0px 50px 20px rgba(0,0,0,0.37); 
 
-    //pointer-events: none;
+    @media(max-width:576px){
+        padding: 30px 30px;
+	}
+
+    @media(max-width:532px){
+		margin-left: 20px;
+		margin-right: 20px;
+	}
 }
 
 .modal-contacts_list{
     display: flex;
     justify-content: center;
+
+    margin-bottom: 35px;
 }
 
 .social-links:not(:last-child){
     margin-right: 30px;
 }
-
-// .close-icon{
-//     max-width:20px;
-//     max-height:20px;
-//     //padding:2px;
-// }
-
-// .close-icon:hover{
-//     cursor:pointer;
-// }
-
-// .modal-contacts_close-btn{
-//     display: block;
-//     // min-width: 40px;
-//     // min-height: 40px;
-
-//     // max-height:40px;
-
-//     width: 40px;
-//     height: 40px;
-// }
