--- a/src/styles/modules/about.scss
+++ b/src/styles/modules/about.scss
@@ -45,7 +45,7 @@
 }
 
 .about-step__text{
-	color: rgb(100, 100, 100);
+	color: #646464;
 	font-weight: 500;
 	font-size: 30px;
 	margin-top: 50px;
@@ -72,4 +72,8 @@
 		margin-top: 10px;
 	}
 
+}
+
+.about-links{
+	text-decoration: underline;
 }
