last improvements before deploy

--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -30,6 +30,9 @@
 		padding-left: 20px;
 		padding-right: 20px;
 	}
+
+	padding-bottom: 60px;
+	border-bottom: 2px solid white;
 }
 
 .footer__greetings-title{
@@ -66,3 +69,4 @@
 #footer__greetings-list-item_id{
 	text-decoration: underline;
 }
+
