--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -1,10 +1,14 @@
 .g-content-footer{
-    margin: 0 auto;
-    margin-top: 80px;
+  margin: 0 auto;
+  margin-top: 80px;
 
 	width: 100%;
 	padding: 60px 0; 
 	background-color: rgb(83, 116, 57);
+
+	@media(max-width:998px){
+		margin-top: 45px;
+	}
 }
 
 .footer__greetings{
