--- a/src/styles/modules/help.scss
+++ b/src/styles/modules/help.scss
@@ -38,6 +38,7 @@
     display: flex;
     margin-top: 65px;
     //flex-direction: column;
+    padding-bottom: 50px;
 
     @media(max-width:1360px){
         margin-top: 35px;
@@ -47,14 +48,18 @@
         flex-direction: column;
         margin-top: 65px;
 	}
+
+    @media(max-width:998px){
+        margin-top: 40px;
+	}
 }
 
 .help-block{
     flex: 0 1 33%;
-    padding: 40px 20px;
+    padding: 40px 20px 0px;
 
     @media(max-width:1360px){
-        padding:40px 0px;
+        padding:40px 0px 0px;
 	}
 
     @media(max-width:998px){
@@ -66,6 +71,7 @@
 
     @media(max-width:1360px){
         margin-right: 30px;
+        padding-bottom: 40px;
 	}
 
     @media(max-width:998px){
@@ -88,22 +94,95 @@
 .help__subtitle-info{
     color: #646464;
 }
+///
+table.help__table{
+    text-decoration: none;
+    border-collapse:collapse;
+    width:100%;
+    text-align:center;
+    display:none;
+}
 
-table.help__table{text-decoration: none;border-collapse:collapse;width:100%;text-align:center;}
-table.help__table th{font-weight:normal;font-size:14px; color:#000000;background-color:#ffffff;}
-table.help__table td{font-size:13px;color:#000000;}
-table.help__table td,table.help__table th{white-space:pre-wrap;padding:10px 5px;line-height:13px;vertical-align: middle;border: 1px solid #c9c9c9;}
-table.help__table tr:hover{background-color:#f9fafb}
-table.help__table tr:hover td{color:#000000;cursor:default;}
+table.help__table th{
+    font-weight:normal;
+    font-size:14px;
+    color:#000000;
+    background-color:#ffffff;
+}
+
+table.help__table td{
+    font-size:13px;
+    color:#000000;
+}
+
+table.help__table td,table.help__table th{
+    white-space:pre-wrap;
+    padding:10px 5px;
+    line-height:13px;
+    vertical-align: middle;
+    border: 1px solid #c9c9c9;
+}
+
+table.help__table tr:hover{
+    background-color:#f9fafb;
+}
+
+table.help__table tr:hover td{
+    color:#000000;
+    cursor:default;
+}
+///
 
 table.help__table{max-width: 400px; margin: 30px auto;}
 
 .help-warn{
-    padding-top: 20px;
+    padding-top: 40px;
     border-top: 2px solid #074d1085;
 }
 
 .help-warn_link{
     cursor: pointer;
     text-decoration: underline;
+}
+
+
+
+.help__payment-data{
+    text-align: center;
+    font-size: 50px;
+    font-weight: 300;
+    padding-bottom: 20px;
+}
+
+.payment-data__sber:before{
+    content: 'СБЕРБАНК:';
+    display: inline-block;
+    color: rgb(23, 95, 5); 
+    position: relative;
+    z-index: -1;
+    top: -5px; 
+    font-size: 35px;
+    margin-right: 20px;
+
+}
+
+.payment-data__u-money:before{
+    content: 'ЮMONEY:';
+    display: inline-block;
+    color: rgb(23, 95, 5); 
+    position: relative;
+    z-index: -1;
+    top: -5px; 
+    font-size: 35px;
+    margin-right: 20px;
+
+}
+
+.payment-data__u-money{
+    margin-left: -44px;
+}
+
+.payment-data{
+    padding-bottom: 15px;
+    display: inline-block;
 }
