--- a/src/styles/modules/about.scss
+++ b/src/styles/modules/about.scss
@@ -1,9 +1,13 @@
 .g-content-about{
 	justify-content: center;
-	margin: 100px auto 100px auto;
+	margin: 100px auto;
 
 	@media(max-width:576px){
 		padding: 0 20px;
+	}
+
+	@media(max-width:576px){
+		margin: 60px auto;
 	}
 }
 
