--- a/src/styles/modules/hero.scss
+++ b/src/styles/modules/hero.scss
@@ -8,38 +8,34 @@
 	}
 
 	@media(max-width:998px){
-		padding: 0 100px;
+		padding: 0 40px;
 	}
+	
 }
 
 .g-content-hero{
-	margin: auto;
+	margin: 100px auto;
 
 	@media(max-width:576px){
 		margin:0;
 		padding: 0 20px;
+		margin: 80px auto;
+
 	}
 }
 
 .hero-wrapper{
 	display: flex;
-
 	justify-content: space-between;
-	padding-top: 100px;
+
 
 	@media(max-width:1360px){
 		justify-content: center;
-
 		align-items: center;
 	}
 
-	@media(max-width:998px){
-		padding-top: 60px;
-	}
-
-    @media(max-width:576px){
+  @media(max-width:576px){
 		flex-direction: column-reverse;
-		padding-top: 30px;
 	}
 }
 
