--- a/src/styles/modules/about.scss
+++ b/src/styles/modules/about.scss
@@ -2,11 +2,12 @@
 	justify-content: center;
 	margin: 100px auto;
 
-	@media(max-width:576px){
-		padding: 0 20px;
+	@media(max-width:998px){
+		margin: 80px auto;
 	}
 
 	@media(max-width:576px){
+		padding: 0 20px;
 		margin: 60px auto;
 	}
 }
