--- a/src/styles/modules/hero.scss
+++ b/src/styles/modules/hero.scss
@@ -16,11 +16,13 @@
 .g-content-hero{
 	margin: 100px auto;
 
-	@media(max-width:576px){
-		margin:0;
-		padding: 0 20px;
+	@media(max-width:998px){
 		margin: 80px auto;
+	}
 
+	@media(max-width:576px){
+		padding: 0 20px;
+		margin: 60px auto;
 	}
 }
 
